// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.overrule-skip-multilevel.acceptance given: [case1] D2 — overrule l1 only → l2 is the next gate → passage blocked when: [t0] pass attempted after l1 overrule then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: advanced-checker (l2, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
   │
   ├─ r3: premium-checker (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 1/5)
      │   │   ├─ rejected, cached
      │   │   ├─ overruled ✓ — forgiven by human
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
      │   ├─ r2: advanced-checker (l2, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
      │   └─ r3: premium-checker (l3, 0/5)
      │       └─ awaits l2 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (overruled ✓) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.overrule-skip-multilevel.acceptance given: [case2] D3 — l1 overruled, l2 approves, l3 un-approved → passage blocked when: [t0] pass attempted — l1 waved, l2 approves, l3 rejects then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: advanced-checker (l2, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
   │
   ├─ r3: premium-checker (l3, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.given.by_peer.premium-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.taken.by_self.premium-checker.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 1/5)
      │   │   ├─ rejected, cached
      │   │   ├─ overruled ✓ — forgiven by human
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
      │   ├─ r2: advanced-checker (l2, 1/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
      │   └─ r3: premium-checker (l3, 1/5)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.given.by_peer.premium-checker.md
      │       └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.taken.by_self.premium-checker.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (overruled ✓) — it no longer blocks you
   ├─ l2 is terminal (approved) — it no longer blocks you
   ├─ l3 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.overrule-skip-multilevel.acceptance given: [case3] D3-pass — l1 overruled, l2 + l3 approve → passage overruled (allowed) when: [t0] pass attempted — l1 waved, l2 + l3 approve then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: advanced-checker (l2, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
   │
   ├─ r3: premium-checker (l3, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.given.by_peer.premium-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.taken.by_self.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 1/5)
   │  │   │   ├─ rejected, cached
   │  │   │   ├─ overruled ✓ — forgiven by human
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.basic-checker.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.basic-checker.md
   │  │   ├─ r2: advanced-checker (l2, 1/5)
   │  │   │   ├─ approved [TIME]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.given.by_peer.advanced-checker.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r002._.taken.by_self.advanced-checker.md
   │  │   └─ r3: premium-checker (l3, 1/5)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.given.by_peer.premium-checker.md
   │  │       └─ taken: .reviews/peer/1.vision._.review.i002.8739656801d5e77f22.r003._.taken.by_self.premium-checker.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule-skip-multilevel.acceptance given: [case4] JUDGE-READY — overrule the top peer level → the judge is the next ready gate when: [t0] the human overrules the TOP peer level (l3) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ ✓ overruled
      ├─ level 3, overruled
      └─ judge, ready
"
`;
